...
                        <color key="sectionIndexBackgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                        <connections>
                            <outlet property="dataSource" destination="Ng3-58-DGX" id="xal-Mz-noC"/>
                            <outlet property="delegate" destination="Ng3-58-DGX" id="wmj-PK-ppp"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Items" largeTitleDisplayMode="always" id="A9n-Qf-8PR">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="juR-8A-kjN">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="h4z-tp-qgW" kind="show" identifier="toForm" id="tV3-F6-d6T"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                        <rect key="frame" x="30" y="16.5" width="315" height="35"/>
                                                        <color key="backgroundColor" red="0.25005361437797546" green="0.30566063523292542" blue="0.58369332551956177" alpha="1" colorSpace="calibratedRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="35" id="uaW-6f-5GZ"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                                                        <state key="normal" title="Save">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <segue destination="Uy3-7A-kpV" kind="unwind" unwindAction="unwindToItemListWithSender:" id="2iO-Ou-ftz"/>
                                                        </connections>
                                                    </button>
...
