...
        performSegue(withIdentifier: "toForm", sender: self)
    }
    
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath, for orientation: SwipeActionsOrientation) -> [SwipeAction]? {
        guard orientation == .right else { return nil }
        
        let deleteAction = SwipeAction(style: .destructive, title: "Delete") { action, indexPath in
            self.remove(at: indexPath)
        }
        
        // customize the action appearance
        deleteAction.image = UIImage(named: "delete")
        
...
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { action in
            cell.hideSwipe(animated: true)
        }
        alertController.addAction(cancelAction)
        
        let OKAction = UIAlertAction(title: "OK", style: .destructive) { action in
            cell.hideSwipe(animated: true)
            let item = self.items[at.row]
            self.removeNotification(for: item)
            self.items.remove(at: at.row)
            self.tableView.deleteRows(at: [at], with: .fade)
            guard let imgPath = item.imagePath else { return }
...
